[project]
name = "ImperialMatch"
version = "0.1.0"
description = "Herramienta para emparejamiento y visualización de asignaciones académicas"
authors = [
    { name = "Rene Simg", email = "renesimgrueda@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scipy",
    "networkx",
    "seaborn"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"